--- a/config.json
+++ b/config.json
@@ -650,5 +650,5 @@
   "prefix": "%",
   "coin": "ZEON",
   "blocktime": 60,
-  "token": "NTg4MDQ0NTM3NzM0MzY1MjA0.XiUukQ.cRTun4QsWhdOmPUOKUhXbSFcD3A"
+  "token": "Create_Your_own_Token"
 }
